# shpsg-parser

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASING.md  SPECIFICATION.md  WORK_REPORT_20250930.md  WORK_REPORT_20251001.md  pyproject.toml  run.sh  run_typer.sh  streamlit_app.py  test_output.csv
.github/workflows/: create-release.yml
archive/: HANDOVER.md  WORK_REPORT_20250913.md  WORK_REPORT_20250916.md  WORK_REPORT_20250917.md
data/: typer_category_output.csv  typer_output.csv  typer_product_output.csv
data/samples/: category_sample.html  keyword_search_result_sample.html  product_detail_sample.html  shop_sample.html
docs/: TEST_SPECIFICATION.md
docs/reports/: README.md  category_page_analysis_report.md  example_product_list_page_analysis_report.md  keyword_search_result_page_analysis_report.md  product_detail_page_analysis_report.md  shop_product_list_page_analysis_report.md
docs/templates/: README.md  WORK_REPORT_YYMMDD.md
src/shpsg_parser/: __init__.py  cli.py  models.py  models_product.py  page_type_identifier.py  parser_base.py  parser_category.py  parser_product.py  parser_search.py  parser_shop.py
tests/: test_page_type_identifier.py  test_parser_base.py  test_parser_category.py  test_parser_product.py  test_parser_search.py  test_parser_shop.py
